src/App.css
/* main {
  text-align: center;
  vertical-align: center;
  line-height: 100vh
} */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Red Rose', cursive;
}

body {
  color: #434343;
  margin: 0;
  padding: 0;
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 40px 80px;
}

.navbar div img {
  max-height: 32px;
}

.navbar-menu {
  display: none;
}

.links {
  display: flex;
  gap: 30px;
}

.links a, .nft-links a {
  color: #434343;
}

a {
  text-decoration: none;
  font-size: 16px;
  font-weight: 400;
}


.connect-wallet {
  background: #A02279;
  border-radius: 10px;
  color: white;
  padding: 15px;
}

.header-container {
  margin: 0 100px;
  display: grid;
  grid-template-columns: 0.9fr 1.1fr;
  gap: 20px;
  align-items: center;
}

.grid-item h1 {
  font-weight: 500;
  font-size: 56px;
  line-height: 140%;
  letter-spacing: -2px;
}

.pink {
  color: #A02279;
}

.grid-item p {
  font-size: 24px;
  line-height: 36px;
  margin-top: 25px;
}

.form-container {
  display: flex;
  margin-top: 35px;
}

.form-container input {
  outline: none;
  border: .11px solid #9c9c9c;
  border-radius: 10px 0 0 10px;
  padding: 10px;
  font-size: 16px;
}

.form-container button {
  background: #A02279;
  color: white;
  outline: none;
  border: none;
  border-radius: 0px 10px 10px 0px;
  padding: 0px 40px;
}

.grid-item2 {
  display: grid;
  grid-template-columns: 1fr 1fr;
  width: 100%;
  gap: 10px;
}

.header-imgs-2 {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 100%;
}

.header-imgs-2 img {
  width: max(100px, 100%);
}

.header-imgs-2a {
  margin-top: 70px;
}

.backers-container {
  background: #A02279;
  padding: 15px 100px;
  display: flex;
  justify-content: space-between;
  margin-top: 60px;
}

.backers-container img {
  height: 30px;
}

.nft-cards-container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  margin: 0px 100px;
  gap: 20px;
}

.card-container {
  border: 1px solid #9c9c9c;
  display: inline-flex;
  flex-direction: column;
  padding: 15px;
  border-radius: 10px;
  width:100%;
}

.nft-home-cards {
  margin-bottom: 80px;
}

.nft-home-cards h3 {
  font-weight: 700;
  font-size: 48px;
  text-align: center;
  color: #000000;
  margin: 40px 0;
}

.nft-img {
  width: 100%;
  border-radius: 10px;
}

.nft-text {
  display: flex;
  flex-direction: column;
}
.nft-flexed {
  display: flex;
  justify-content: space-between;
  font-size: 12px;
}

.nft-flexed p{
  margin:5px;
  padding:0;
}

.metabnb-copy-container {
  padding: 100px 100px;
  background: #A02279;
  display: grid;
  grid-template-columns: 1fr 1fr;
  align-items: center;
  gap: 60px;
}

.meta-grid-item h3, .meta-grid-item p {
  color: white; 
}

.meta-grid-item h3 {
  font-size: 54px;
  font-weight: 700;
}

.meta-grid-item p {
  font-size: 18px;
  line-height: 35px;
  font-weight: 400;
  margin-bottom: 50px;
}

.metabnb-head {
  font-size: 54px;
}

#learn-more {
  background: white;
  font-size: 14px;
  font-weight: 400;
  color: #A02279;
  padding: 15px 30px;
}

.metabnb-img { 
  width:100%;
}

.footer-grid {
  background: #1D1D1E;
  color: white;
  display: flex;
  justify-content: space-between;
  padding: 70px 100px;
}

.footer-grid-item {
  display: flex;
  flex-direction: column;
  color: white;
  gap: 15px;
  justify-contents: center;
}

.footer-link-head {
  font-size: 18px;
  margin-bottom: 24px;
}

.footer-grid-item a {
  text-decoration: none;
  color: #F1F3F9;
  font-weight: 300;
  font-size: 14px;
}

.footer-logos-section {
  display: flex;
  flex-direction: column;
  gap:60px;
}

.metabnb-logo {
  display: flex;
  gap: 10px;
}

.footer-logo {
  height: 22px;
}

.social-logos {
  display: flex;
  gap: 20px;
  font-size: 14px;
}

.nft-links {
  padding: 50px 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin: 0px 100px;
}

.location-input {
  padding: 10px;
  width: 150px;
  border-radius: 10px;
  outline: none;
  border: 0.4px solid #9c9c9c;
}



.wallet-modal {
  width: 600px;
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1000;
  border-radius: 15px;
  background: white;
}

.modal-container {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin-bottom: 20px;
}

.connect-wallet-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
    border-bottom: 1px solid #CFD8DC;
}

.connect-wallet-container h5 {
  font-weight: 600;
  font-size: 20px;
  color: #333333;
}

.modal-container p {
  padding: 0 20px;
}

.wallet-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background: #F8F9FA;
  border-radius: 10px;
  margin: 0 20px;
}

.wallet-container div {
  display: flex;
  gap: 8px;
  align-items: center;
}

.wallet-container div img{
  width: 30px;
}

.fa-chevron-right {
  color: #959DA6;
}


/* Portrait and Landscape.. Small Phones */
@media all and (max-width: 767px) { 
  .navbar {
    margin: 30px 20px;
    display: block;
}

  .navbar1-flex {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

.navbar-menu {
  display: block;
}

  .links, .connect-wallet {
    display: none;
  }

  .links {
    flex-direction: column;
  }

  .links a{
    display: block;
    font-size: 18px;
    padding: 8px 0;
    border-bottom: 1px solid #CFD8DC;
  }

  .links .nav-community {
    border-bottom: none;
  }

  .wallet-modal {
    width: 90%;
    margin: 20px auto;
    
  }

  .navbar div img {
  max-height: 11px;
}
  
  .header-container {
    grid-template-columns: 1fr;
    justify-contents: center;
    gap: 20px;
    margin: 0 20px;
  }

  .header-imgs-2 img {
    width: 90%;
}

  .form-container {
    margin: 30px 0;
  }

  .grid-item2 {
    justify-content: center;
  }

  .grid-item h1 {
  font-size: 48px;
  line-height: 120%;
}

  .backers-container {
  padding: 15px 20px;
}

  .backers-container img {
  height: 20px;
}
  
  .nft-cards-container {
  grid-template-columns: 1fr;
  margin: 0 40px;
  gap: 30px;
  }
  
  .metabnb-copy-container {
  display: grid;
  grid-template-columns: 1fr;
  padding: 50px 40px 40px 40px;
}

  .metabnb-img { 
  display: none;
}

  .footer-grid {
    padding: 50px 20px 70px 20px;
    gap: 15px;
}

  .footer-link-head {
  font-size: 14px;
}

  .footer-grid-item a {
  font-size: 11px;
}
  
  .footer-logo {
  height: 13px;
}

  .nft-links {
  padding: 20px 0 40px 0;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  margin: 0px 20px;
  gap: 20px;
}

  .nft-link {
    font-size: 12px;
  }

  .location-input {
  padding: 8px;
  width: 80px;
}
}

/* Tablet Media Queries */
@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 1024px) 
  and (-webkit-min-device-pixel-ratio: 2) {

  .navbar {
  margin: 30px 40px;
}

  .navbar div img {
  max-height: 16px;
}
  
  .header-container {
    grid-template-columns: 1fr  1fr;
    gap: 20px;
    margin: 0 40px;
    align-items: center;
  }


.header-imgs-2 {
  width: 100%;
}

.header-imgs-2 img {
  width: max(100px, 100%);
}

  .grid-item2 {
    justify-content: right;
  }

  .grid-item h1 {
  font-size: 40px;
  line-height: 120%;
}

  .grid-item p {
  font-size: 18px;
  line-height: 32px;
  margin-top: 15px;
}

.form-container {
  display: flex;
  padding-top: 5px;
}

  .backers-container {
  padding: 15px 40px;
}

  .backers-container img {
  height: 27px;
}
  
  .nft-cards-container {
  grid-template-columns: repeat(2, 1fr);
  margin: 40px 40px;
  gap: 30px;
  }

  
  .metabnb-copy-container {
  display: grid;
  grid-template-columns: 1fr 1.0fr;
  padding: 80px 40px 80px 40px;
}

  .metabnb-img { 
  width:100%;
}

  .footer-grid {
  padding: 50px 40px 70px 40px;
}

  .footer-logo {
  height: 18px;
}

  .nft-links {
  padding: 20px 0 40px 0;
  margin: 0px 40px;
  gap: 20px;
}

  .nft-link {
    font-size: 12px;
  }

  .location-input {
  padding: 8px;
  width: 80px;
}
}

